# potter-wasm

./: .gitignore  Cargo.toml  LICENSE  README.md  run_sxs.sh
cpp/: b2b3.cpp
docs/: index.html
docs/superpowers/plans/: 2026-06-12-neff-b2-temperature-derivatives.md  2026-06-13-stockmayer-neff.md  2026-06-15-noble-gas-quantum-b2.md  2026-06-20-web-real-fluids-noble-gas.md  2026-06-21-helium-full-quantum-b2.md
docs/superpowers/specs/: 2026-06-12-neff-b2-temperature-derivatives-design.md  2026-06-13-stockmayer-neff-design.md  2026-06-15-noble-gas-quantum-b2-design.md  2026-06-20-web-real-fluids-noble-gas-design.md  2026-06-21-helium-full-quantum-b2-design.md
examples/: b2print.rs  neff_curve.rs
figures/: neff_engine.csv
node/: molecule-e2e.mjs  noblegas-e2e.mjs  quantum-e2e.mjs  run-aot-browser.mjs  run-aot.mjs  run-wasi.mjs  run.mjs  stockmayer-e2e.mjs
scripts/: plot_neff.py
src/: aot.rs  cubature.rs  dsl.rs  fastpot.rs  he_potential.rs  integrate.rs  jit.rs  lib.rs  main.rs  molecule.rs  msmc.rs  noblegas.rs  physics.rs  quantum.rs
web/: build.sh  index.html.in
