[package]
name = "potter_poc"
version = "0.1.0"
edition = "2021"
description = "Proof-of-concept: B2 for a DSL-defined pair potential, integrated in pure Rust, runnable as WASM"

# Build as BOTH a normal Rust lib (for the native bin + tests) and a cdylib
# (the self-contained WASM 'plugin' that node.js calls into).
[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "potter_poc"
path = "src/main.rs"

[dependencies]
num-dual = "0.14"
fasteval = "0.2.4"
# Pure-Rust libm so the same math (exp/pow/tgamma) links on every target,
# including wasm32-unknown-unknown which has no system libm.
libm = "0.2"
wasm-encoder = "0.251.0"
wasmparser = "0.251.0"

[profile.release]
opt-level = 3
lto = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cranelift = "0.128.4"
cranelift-jit = "0.128.4"
cranelift-module = "0.128.4"
cranelift-native = "0.128.4"
